<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="close">Close</string>
  <string name="open">Open</string>
  <string name="swap_languages">Swap Languages</string>
  <string name="enter_text_to_translate">Enter text to translate</string>
  <string name="translate">Translate</string>
  <string name="copy">Copy</string>
  <string name="play_loud">Play Loud</string>
  <string name="copied_to_clipboard">Copied to clipboard</string>
  <string name="history">History</string>
  <string name="error_service_unavailable">Server unavailable</string>
  <string name="error_client">Something went wrong</string>
  <string name="error_server">Server error occurred</string>
  <string name="error_unknown">Unknown error occurred</string>
  <string name="record_audio">Record Audio</string>
  <string name="error_speech_recognition_unavailable">Speech recognition unavailable</string>
  <string name="stop_speaking">Stop recording audio</string>
  <string name="use_recording">Use Recording</string>
  <string name="record_again">Record again</string>
  <string name="close_screen">Close voice to text sxreen</string>
  <string name="listening">Listening…</string>
  <string name="start_talking">Click record and start talking</string>
</resources>